--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "Rubik";
-  src: url(/fonts/rubik/rubik-400.woff2) format("woff2");
+  src: url(../fonts/rubik/rubik-400.woff2) format("woff2");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: "Rubik";
-  src: url(/fonts/rubik/rubik-700.woff2) format("woff2");
+  src: url(../fonts/rubik/rubik-700.woff2) format("woff2");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -16,15 +16,15 @@
 
 @font-face {
   font-family: "Raleway";
-  src: url(/fonts/raleway/raleway-800.woff2) format("woff2");
+  src: url(../fonts/raleway/raleway-800.woff2) format("woff2");
   font-weight: 800;
   font-style: normal;
   font-display: swap;
 }
 
 body {
-  font-family: "Raleway", sans-serif;
-  font-weight: 800;
+  font-family: "Rubik", sans-serif;
+  font-weight: 400;
   font-size: 18px;
   line-height: 30px;
 
@@ -52,56 +52,65 @@ overflow: hidden;
   background-color: #FFE17F;
 }
 
+/* .search-form {}                  ПРОПИСАТЬ СТИЛИ ДЛЯ ФОРМЫ */
+
 .navigation-list {
   list-style-type: none;
 }
 
 .navigation-user-link {
-  font-family: "Rubik", sans-serif;
-  line-height: inherit;
-  font-weight: 400;
-  text-align: center;
-  color: inherit;
-  text-decoration: none;
+font-family: "Rubik", sans-serif;
+font-weight: 400;
+font-size: 18px;
+line-height: 30px;
+text-align: center;
+color: #000000;
+text-decoration: none;
 }
 
 .navigation-link {
-  font-family: "Raleway", sans-serif;
-  line-height: 21px;
-  font-weight: 800;
-  text-align: center;
-  color: inherit;
-  text-decoration: none;
-  text-transform: uppercase;
+font-family: "Raleway", sans-serif;
+font-style: normal;
+line-height: 21px;
+font-weight: 800;
+letter-spacing: 0.2em;
+text-align: center;
+color: #000000;
+text-decoration: none;
+text-transform: uppercase;
 }
 
 /* main */
 
 .number {
-  font-family: "Rubik", sans-serif;
-  line-height: inherit;
-  font-weight: 700;
-  font-size: 180px;
-  color: #FFFFFF;
+font-family: "Rubik", sans-serif;
+line-height: 30px;
+font-style: normal;
+font-weight: 700;
+font-size: 180px;
+color: #FFFFFF;
 }
 
-.slider h3 {
-  font-weight: 800;
-  font-size: 50px;
-  line-height: 50px;
+.main-title {
+font-family: 'Raleway', sans-serif;
+font-style: normal;
+font-weight: 800;
+font-size: 50px;
+line-height: 50px;
 }
 
-.slider p {
+.text {
   color: #444444;
 }
 
 .specification th {
-  font-size: 36px;
+font-weight: 400;
+font-size: 36px;
 }
 
 .specification td {
-  font-size: 16px;
-  color: #444444;
+font-size: 16px;
+color: #444444;
 }
 
 .category-card-image {
@@ -109,16 +118,20 @@ background-color: #FFE17F;
 }
 
 .category-list {
-  list-style-type: none;
+list-style-type: none;
 }
 
 .category-card-link {
 text-decoration: none;
+color: #000000;
 }
 
 .category-card-link p {
-  line-height: 24px;
-  color: #000000;
+font-family: 'Raleway', sans-serif;
+font-style: normal;
+font-weight: 800;
+font-size: 18px;
+line-height: 24px;
 }
 
 .advantage-button {
@@ -128,6 +141,11 @@ font-weight: 800;
 font-size: 18px;
 line-height: 21px;
 text-transform: uppercase;
+
+
+border: none;
+cursor: pointer;
+background-color: #FFE17F;
 }
 
 .advantage-button.active {
@@ -137,19 +155,6 @@ background-color: #000000;
 
 .advantage {
 background-color: #F0F0F0;
-}
-
-.advantage-item h3{
-font-size: 50px;
-line-height: 50px;
-}
-
-.advantage-item p{
-font-family: 'Rubik', sans-serif;
-font-style: normal;
-font-weight: 400;
-font-size: 18px;
-line-height: 30px;
 }
 
 /* .delivery-button {
@@ -165,31 +170,6 @@ line-height: 30px;
   background: rgba(220, 220, 220, 0.5);
 } */
 
-.section-contact h2{
-font-size: 50px;
-line-height: 50px;
-}
-
-.section-contact h3{
-font-family: 'Rubik', sans-serif;
-font-style: normal;
-font-weight: 700;
-font-size: 24px;
-line-height: 30px;
-
-color: #444444;
-}
-
-.section-contact p{
-font-family: 'Rubik', sans-serif;
-font-style: normal;
-font-weight: 400;
-font-size: 18px;
-line-height: 30px;
-
-color: #444444;
-}
-
 .delivery-item li {
 color: #FFC700;
 }
@@ -204,8 +184,15 @@ line-height: 20px;
 color: #000000;
 }
 
+.subtitle {
+font-weight: 700;
+font-size: 24px;
+line-height: 30px;
+color: #444444;
+}
+
 .contacts-address-text {
-font-family: 'Rubik', sans-serif;
+font-family: "Rubik", sans-serif;
 font-style: normal;
 font-weight: 400;
 font-size: 18px;
@@ -233,11 +220,14 @@ color: #444444;
 list-style-type: none;
 }
 
-.button {
+.main-button {
 line-height: 21px;
 text-decoration: none;
 text-transform: uppercase;
 text-align: center;
+letter-spacing: 0.2em;
+
+background: #FFE17F;
 color: #000000;
 }
 
@@ -245,20 +235,9 @@ color: #000000;
   background-color: #F0F0F0;;
 }
 
-.section-distribution h2{
-font-size: 50px;
-line-height: 50px;
-}
 
-.section-distribution p{
-font-family: 'Rubik', sans-serif;
-font-style: normal;
-font-weight: 400;
-font-size: 18px;
-line-height: 30px;
+/* форма */
 
-color: #444444;
-}
 
 /* footer */
 .page-footer {
@@ -266,25 +245,32 @@ color: #FFFFFF;
 background-color: #444444;
 }
 
+.text-footer {
+color: #FFFFFF;}
+
 .logo-footer {
 /* Можно ли изменить цвет у svg? Или нужно желтое лого экспортировать из Фигмы? */
+}
+
+.social-button {
+background: rgba(255, 255, 255, 0.3);
+border-radius: 50%;
 }
 
 .footer-social-list {
 list-style-type: none;
 }
 
-/* catalog */
-.inner-header-title {
-font-size: 50px;
-line-height: 50px;
-}
 
+
+/* catalog */
 .breadcrumbs-item {
 list-style-type: none;
 }
 
 .breadcrumbs-item a{
+font-size: 16px;
+line-height: 20px;
 text-decoration: none;
 color: #000000;
 }
@@ -294,27 +280,32 @@ background-color: #F0F0F0;
 }
 
 .filter-title {
+font-family: 'Raleway', sans-serif;
+font-weight: 800;
 font-size: 16px;
 line-height: 19px;
+letter-spacing: 0.2em;
 text-transform: uppercase;
 }
 
+/* фильтр - форма */
+
 .catalog-filter-title {
 font-family: 'Rubik', sans-serif;
-font-style: normal;
 font-weight: 700;
 font-size: 18px;
 line-height: 20px;
 }
 
 .catalog-filter-item {
-font-family: 'Rubik', sans-serif;
-font-style: normal;
-font-weight: 400;
 font-size: 16px;
 line-height: 20px;
 
 list-style-type: none;
+}
+
+.button {
+border: none;
 }
 
 .product-card {
@@ -327,52 +318,66 @@ color: #000000;
 }
 
 .product-card-price {
-font-family: 'Rubik', sans-serif;
-font-style: normal;
-font-weight: 400;
-font-size: 18px;
 line-height: 21px;
+color: #444444;
 }
 
 .product-card-title {
-font-family: 'Rubik', sans-serif;
-font-style: normal;
 font-weight: 700;
 font-size: 18px;
 line-height: 20px;
+letter-spacing: -0.02em;
 }
 
 .pagination-show-more {
+font-family: 'Raleway', sans-serif;
+font-style: normal;
+font-weight: 800;
+font-size: 16px;
 line-height: 19px;
 text-transform: uppercase;
 letter-spacing: 0.2em;
+
+border: 3px solid #E5E5E5;
 }
 
 .pagination {
 list-style-type: none;
 }
 
+.pagination-back {
+font-family: 'Raleway', sans-serif;
+font-weight: 800;
+font-size: 18px;
+line-height: 21px;
+letter-spacing: 0.2em;
+text-transform: uppercase;
+
+color: #444444;
+opacity: 0.3;
+}
+
 .pagination-link {
-font-family: 'Rubik';
-font-style: normal;
-font-weight: 400;
 font-size: 16px;
 line-height: 20px;
 text-decoration: none;
 
 color: #444444;
+opacity: 0.3;
 }
 
-.pagination-back {
-line-height: 21px;
-text-transform: uppercase;
-letter-spacing: 0.2em;
+.pagination-current {
+opacity: 0.6;
 }
 
 .pagination-next {
+font-family: 'Raleway', sans-serif;
+font-weight: 800;
+font-size: 18px;
 line-height: 21px;
-text-transform: uppercase;
 letter-spacing: 0.2em;
+text-transform: uppercase;
+text-decoration: none;
 
 color: #000000;
 }
