--- a/5/styles/styles.css
+++ b/5/styles/styles.css
@@ -53,11 +53,19 @@ body {
   overflow: hidden;
 }
 
+.wrapper {
+  width: 1160px;
+  margin: 0 auto;
+}
+
+
 /* header */
 
 .page-header {
   color: inherit;
   background-color: #FFE17F;
+  width: 1160px;
+  margin: 0 auto;
 }
 
 .search-form {
@@ -68,8 +76,6 @@ body {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  width: 1160px;
-  margin: 0 auto;
 }
 
 .navigation-section {
@@ -83,6 +89,11 @@ body {
   gap: 24px;
   align-items: center;
   list-style-type: none;
+}
+
+.navigation-section-wide {
+  max-width: 650px;
+  flex-wrap: wrap;
 }
 
 .navigation-user-link {
@@ -111,14 +122,11 @@ body {
   opacity: 0.3;
 }
 
+
+
 /* main */
 .main-container {
   flex-grow: 1;
-}
-
-.page-container {
-  width: 1160px;
-  margin: 0 auto;
 }
 
 .slider {
@@ -138,7 +146,7 @@ body {
   line-height: 50px;
 }
 
-.number {
+.slider-number {
   font-family: "Rubik", sans-serif;
   line-height: 30px;
   font-style: normal;
@@ -161,12 +169,17 @@ body {
   color: #444444;
 }
 
+.category-card {
+  width: 160px;
+}
+
 .category-card-image {
   background-color: #FFE17F;
 }
 
 .category-list {
   display: flex;
+  flex-wrap: wrap;
   list-style-type: none;
   column-gap: 40px;
   padding: 0;
@@ -206,8 +219,12 @@ body {
 }
 
 .advantage {
-  display: flex;
   background-color: #F0F0F0;
+
+}
+
+.advantage-wrapper {
+  display: flex;
 }
 
 .advantage-list {
@@ -224,6 +241,10 @@ body {
   gap: 110px;
 
   width: 694px;
+}
+
+.advantage-delivery {
+  display: flex;
 }
 
 /* .delivery-button {
@@ -339,8 +360,6 @@ body {
 .page-footer {
   color: #FFFFFF;
   background-color: #444444;
-  width: 1160px;
-  margin: 0 auto;
 }
 
 .footer-column {
@@ -426,7 +445,17 @@ body {
 
 
 /* catalog */
-.breadcrumbs-item {
+
+.catalog {
+  display: flex;
+}
+
+.breadcrumbs {
+  display: flex;
+  padding: 0;
+}
+
+.breadcrumbs-item {align-self: 1§;
   list-style-type: none;
 }
 
@@ -437,7 +466,17 @@ body {
   color: #000000;
 }
 
+.assortment {
+  display: flex;
+  justify-content: space-between;
+}
+
+.catalog-wrapper {
+  width: 840px;
+}
+
 .catalog-products {
+  display: flex;
   background-color: #F0F0F0;
 }
 
@@ -448,6 +487,13 @@ body {
   line-height: 19px;
   letter-spacing: 0.2em;
   text-transform: uppercase;
+}
+
+.sort-icons {
+  width: 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 /* фильтр - форма */
@@ -468,6 +514,19 @@ body {
 
 .button {
   border: none;
+}
+
+.product {
+  background: #FFFFFF;
+  padding: 70px 40px;
+}
+
+.product-list {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 40px;
+  padding: 0;
 }
 
 .product-card {
@@ -500,11 +559,18 @@ body {
   text-transform: uppercase;
   letter-spacing: 0.2em;
 
+  display: block;
+  margin: 0 auto;
   border: 3px solid #E5E5E5;
 }
 
 .pagination {
+  display: flex;
+  justify-content: space-between;
+
+  height: 71px;
   list-style-type: none;
+  background: #EBEBEB;
 }
 
 .pagination-back {
@@ -517,6 +583,11 @@ body {
 
   color: #444444;
   opacity: 0.3;
+}
+
+.pagination-numbers {
+  display: flex;
+  gap: 30px;
 }
 
 .pagination-link {
