--- a/styles/styles.css
+++ b/styles/styles.css
@@ -58,6 +58,9 @@ body {
   margin: 0 auto;
 }
 
+.wrapper:last-child {
+  margin-bottom: 0;
+}
 
 /* header */
 
@@ -65,17 +68,53 @@ body {
   color: inherit;
   background-color: #FFE17F;
   width: 1160px;
-  margin: 0 auto;
+  margin: 40px auto 0 auto;
+  min-height: 300px;
+  padding: 0 60px;
+  box-sizing: border-box;
+}
+
+.page-header-wrapper {
+  margin-top: -20px;
 }
 
 .search-form {
   display: flex;
+  padding: 10px 0 10px 16px;
+  border: 2px solid black;
+  border-radius: 30px;
+  align-items: center;
+  width: 517px;
+}
+
+.search {
+  background: transparent;
+  border: none;
+  font-size: 16px;
+  line-height: 20px;
+  outline: none;
+  margin-left: 16px;
+  box-sizing: border-box;
+}
+
+.search::placeholder {
+  color: black;
+}
+
+.find-button {
+  background: transparent;
+  border: none;
+}
+
+.logo {
+  margin-bottom: 30px;
 }
 
 .navigation {
   display: flex;
   justify-content: space-between;
   flex-direction: column;
+  gap: 30px;
 }
 
 .navigation-section {
@@ -85,10 +124,14 @@ body {
 }
 
 .navigation-section-item {
+  position: relative;
+  z-index: 1;
   display: flex;
+  flex-wrap: wrap;
   gap: 24px;
   align-items: center;
   list-style-type: none;
+  margin: 0;
 }
 
 .navigation-section-wide {
@@ -96,7 +139,13 @@ body {
   flex-wrap: wrap;
 }
 
+.navigation-top-section-enter {
+  display: flex;
+  align-items: center;
+}
+
 .navigation-user-link {
+  /* кликабельная область */
   font-family: "Rubik", sans-serif;
   font-weight: 400;
   font-size: 18px;
@@ -120,6 +169,7 @@ body {
 
 .not-active {
   opacity: 0.3;
+  margin-left: 28px;
 }
 
 
@@ -129,13 +179,43 @@ body {
   flex-grow: 1;
 }
 
-.slider {
+.slider-title {
+  margin-top: 0;
+  margin-bottom: 30px;
+  font-family: 'Raleway', sans-serif;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 50px;
+  line-height: 50px;
+}
+
+.slider-description {
+  margin: 0 0 60px;
+}
+
+.slider-item {
+  display: none;
+  margin-top: -160px;
+}
+
+.slider-item-section {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding-top: 100px;
+}
+
+.slider-item-active {
   display: flex;
 }
 
 .slider-img {
   display: flex;
   align-items: center;
+}
+
+.slider-button {
+  margin-bottom: 60px;
 }
 
 .main-title {
@@ -147,26 +227,53 @@ body {
 }
 
 .slider-number {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
   font-family: "Rubik", sans-serif;
   line-height: 30px;
   font-style: normal;
   font-weight: 700;
   font-size: 180px;
   color: #FFFFFF;
+  padding-right: 48px;
+  box-sizing: border-box;
   }
 
 .text {
   color: #444444;
 }
 
-.specification th {
-  font-weight: 400;
-  font-size: 36px;
+.contacts-text {
+  margin-bottom: 30px;
 }
 
-.specification td {
+.specification {
+  display: flex;
+  gap: 20px;
+}
+
+.specification-item {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 12px;
+}
+
+.specification-item-title {
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 30px;
+}
+
+.specification-item-description {
+  font-weight: 400;
   font-size: 16px;
-  color: #444444;
+  line-height: 30px;
+}
+
+.category {
+  margin-top: 70px;
 }
 
 .category-card {
@@ -175,6 +282,11 @@ body {
 
 .category-card-image {
   background-color: #FFE17F;
+  margin-bottom: 32px;
+}
+
+.category-card-text {
+  margin: 0;
 }
 
 .category-list {
@@ -186,6 +298,7 @@ body {
 }
 
 .category-card-link {
+  display: block;
   text-decoration: none;
   color: #000000;
 }
@@ -213,14 +326,28 @@ body {
   background-color: #FFE17F;
 }
 
+.main-title--mt {
+  margin-top: -30px;
+}
+
+.delivery-list {
+  padding-left: 16px;
+}
+
+.contact-title {
+  margin: 40px 0 48px;
+}
+
 .advantage-button.active {
   color: #FFE17F;
   background-color: #000000;
 }
 
 .advantage {
+  margin-top: 70px;
   background-color: #F0F0F0;
-
+  min-height: 289px;
+  margin-bottom: 70px;
 }
 
 .advantage-wrapper {
@@ -233,7 +360,7 @@ body {
   row-gap: 45px;
 }
 
-.advantage-item {
+.advantage-item-wrapper {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -241,6 +368,11 @@ body {
   gap: 110px;
 
   width: 694px;
+}
+
+.advantage-item {
+  display: flex;
+  align-items: center;
 }
 
 .advantage-delivery {
@@ -260,11 +392,16 @@ body {
   background: rgba(220, 220, 220, 0.5);
 } */
 
-.delivery-item li {
+.delivery-item {
   color: #FFC700;
+  margin-bottom: 18px;
 }
 
-.delivery-list span{
+.delivery-item:last-child {
+  margin-bottom: 0;
+}
+
+.delivery-item span{
   font-family: 'Rubik', sans-serif;
   font-style: normal;
   font-weight: 700;
@@ -279,15 +416,25 @@ body {
   font-size: 24px;
   line-height: 30px;
   color: #444444;
+  margin: 30px 0 15px;
 }
 
 .section-contact {
+  margin-top: 70px;
   display: flex;
   gap: 108px;
 }
 
+.section-contact-button {
+  display: block;
+  margin: 40px 0;
+}
+
 .contacts {
   width: 520px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .contacts-address-text {
@@ -310,6 +457,7 @@ body {
 }
 
 .contacts-schedule {
+  padding: 0;
   font-family: 'Rubik', sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -336,11 +484,33 @@ body {
 }
 
 .section-distribution {
+  margin-top: 70px;
   background-color: #F0F0F0;;
+}
+
+.section-distribution-wrapper {
+  padding: 64px 0 56px;
+  display: flex;
+  flex-direction: column;
+  gap: 144px;
+}
+
+/* .section-distribution-title {
+  margin-top: 74px;
+} */
+
+.section-distribution-title {
+  margin: 0;
 }
 
 .section-distribution-top {
   display: flex;
+  justify-content: space-between;
+}
+
+.section-distribution-text {
+  max-width: 560px;
+  margin: 0;
 }
 
 /* форма */
@@ -353,6 +523,7 @@ body {
 .section-distribution-free {
   display: flex;
   gap: 16px;
+  align-items: center;
 
 }
 
@@ -360,6 +531,10 @@ body {
 .page-footer {
   color: #FFFFFF;
   background-color: #444444;
+}
+
+.page-footer-wrapper {
+  padding: 64px 0 62px;
 }
 
 .footer-column {
@@ -376,6 +551,10 @@ body {
   max-width: 240px;
 }
 
+.footer-section-left > img {
+  margin-top: 64px;
+}
+
 .footer-section-center {
   align-items: center;
 }
@@ -389,9 +568,15 @@ body {
   padding: 0;
 }
 
+
 .page-footer-bottom {
   display: flex;
   padding: 0;
+  margin-top: 62px;
+}
+
+.autograph {
+  margin-top: 64px;
 }
 
 .navigation-list {
@@ -399,7 +584,7 @@ body {
   column-gap: 35px;
   padding: 0;
   justify-content: center;
-
+  margin: 0;
   list-style-type: none;
 }
 
@@ -415,7 +600,7 @@ body {
 }
 
 .logo-footer {
-/* Можно ли изменить цвет у svg? Или нужно желтое лого экспортировать из Фигмы? */
+  margin-bottom: 34px;
 }
 
 .footer-social-item {
@@ -438,7 +623,14 @@ body {
   justify-content: center;
   column-gap: 16px;
   list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
+
+
+
+
+
 
 
 
@@ -450,9 +642,31 @@ body {
   display: flex;
 }
 
+.catalog-header {
+  min-height: 186px;
+  padding-bottom: 20px;
+}
+
+.catalog-title {
+  margin: 0;
+}
+
+.inner-header {
+  box-sizing: border-box;
+  padding: 34px 0 34px 60px;
+}
+
+.filter-wrapper {
+  max-width: 200px;
+  padding: 0 60px;
+}
+
 .breadcrumbs {
   display: flex;
+  gap: 16px;
+  align-items: center;
   padding: 0;
+  margin: 0;
 }
 
 .breadcrumbs-item {align-self: 1§;
@@ -469,6 +683,7 @@ body {
 .assortment {
   display: flex;
   justify-content: space-between;
+  padding: 0 40px;
 }
 
 .catalog-wrapper {
@@ -487,6 +702,11 @@ body {
   line-height: 19px;
   letter-spacing: 0.2em;
   text-transform: uppercase;
+}
+
+.select-control {
+  background: transparent;
+  border: none;
 }
 
 .sort-icons {
@@ -516,6 +736,10 @@ body {
   border: none;
 }
 
+.catalog-filter-button {
+  margin-top: 45px;
+}
+
 .product {
   background: #FFFFFF;
   padding: 70px 40px;
@@ -527,6 +751,7 @@ body {
   flex-wrap: wrap;
   gap: 40px;
   padding: 0;
+  margin-top: 0;
 }
 
 .product-card {
@@ -559,16 +784,19 @@ body {
   text-transform: uppercase;
   letter-spacing: 0.2em;
 
-  display: block;
-  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  padding: 18px 40px;
   border: 3px solid #E5E5E5;
+  background: #FFFFFF;
+  margin-bottom: 44px;
 }
 
 .pagination {
   display: flex;
   justify-content: space-between;
-
-  height: 71px;
+  padding: 24px;
   list-style-type: none;
   background: #EBEBEB;
 }
